--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="hero" class="hero">
       <h1>চমৎকার অফার ও চাকরি সুযোগ</h1>
       <p>CPA মার্কেটিং এবং microwork/job posts এর মাধ্যমে আয়ের নতুন উপায় আবিষ্কার করুন। এখনই আপনার সুযোগ নিন!</p>
-      <a href="https://your-cpa-link.com" target="_blank" class="cta-button">অফার গ্রহণ করুন</a>
+      <a href="https://www.effectiveratecpm.com/zru7d3au7?key=4bf54a046ecce504d1a3aaa58d53dc6c" target="_blank" class="cta-button">আরো জানুন</a>
     </section>
 
     <!-- সুবিধার সেকশন -->
@@ -45,7 +45,7 @@
         <div class="job-post">
           <h3>ডাটা এন্ট্রি কাজ</h3>
           <p>সরল ডাটা এন্ট্রি কাজ। দ্রুত ও নির্ভুল কাজের মাধ্যমে আয় করুন।</p>
-          <a href="https://your-cpa-link.com" target="_blank" class="cta-button">আরো জানুন</a>
+           <a href="https://www.effectiveratecpm.com/zru7d3au7?key=4bf54a046ecce504d1a3aaa58d53dc6c" target="_blank" class="cta-button">আরো জানুন</a>
         </div>
         <div class="job-post">
           <h3>ওয়েবসাইট রিভিউ</h3>
@@ -55,7 +55,7 @@
         <div class="job-post">
           <h3>মাইক্রো টাস্কস</h3>
           <p>বিভিন্ন মাইক্রো টাস্কসের মাধ্যমে আয়ের সুযোগ।</p>
-          <a href="https://your-cpa-link.com" target="_blank" class="cta-button">আরো জানুন</a>
+           <a href="https://www.effectiveratecpm.com/zru7d3au7?key=4bf54a046ecce504d1a3aaa58d53dc6c" target="_blank" class="cta-button">আরো জানুন</a>
         </div>
       </div>
     </section>
